# GFTS3

./: .gitignore  CMakeLists.txt  Lab_ChM_1.sln  README.md
Lab_ChM_1/: Lab_ChM_1.vcxproj  Lab_ChM_1.vcxproj.filters  main.cpp
Lab_ChM_1/includes/: template_class.h
Lab_ChM_1/src/: minimum_residual_method.cpp  simple_iteration_method.cpp  template_class.cpp
include/: LLT.h  MCG.h  MCP.h  MMR.h  MSI.h  MWR.h  Matrix_solver.h  SOR_COL.h  Task_manager.h  functions.h
numeric_method/: MCG.cpp  MMR.cpp  MSI.cpp  MWR.cpp  Matrix_solver.cpp  SOR_COL.cpp
src/: MWR.cpp  Task_manager.cpp  functions.cpp  instruction.cpp  main.cpp
ui/: htmls.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  taskChoice.cpp  testtask.html  ui.pro  uiMWR.cpp  uiMethods.cpp  ui_mainwindow.h
ui/urls/: maintask.html  testtask.html
